<resources>
    <!--  Common  -->
    <string name="confirm">확인</string>
    <!--  Main Activity  -->
    <string name="app_name">BusReservation</string>
    <string name="login">로그인/회원가입</string>
    <string name="bus_reservation">버스 예매</string>
    <string name="register_bus">버스 등록</string>
    <string name="confirm_ticket">예매 티켓 확인</string>
    <string name="confirm_payment_history">결제 내역 확인</string>
    <string name="register_payment_method">결제 방법 등록</string>
    <string name="management_member_info">회원 정보 관리</string>

    <!-- Login Activity -->
    <string name="login_hint_user_id">아이디</string>
    <string name="login_hint_user_password">비밀 번호</string>
    <string name="login_btn_cancel">취소</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_btn_sign_up">회원가입</string>

    <!--  Sign Up Activity  -->
    <string name="sign_up_header">회원 가입</string>
    <string name="sign_up_user_name">사용자 이름</string>
    <string name="sign_up_user_email">이메일</string>
    <string name="sign_up_btn_sign_up">등록</string>

    <!--  bus common  -->
    <string name="bus_common_text_departure">출발지</string>
    <string name="bus_common_text_departure_time">출발 시간</string>
    <string name="bus_common_text_arrival">도착지</string>
    <string name="bus_common_text_arrival_time">도착 시간</string>

    <!--  Search Bus Activity  -->
    <string name="search_bus_header">버스 검색</string>
    <string name="search_bus_input_start_date">가는 날</string>
    <string name="search_bus_btn_search">검색</string>

    <!--  Bus List Activity  -->
    <string name="bus_list_header">배차 조회</string>
    <string name="bus_list_btn_before_day">&lt;</string>
    <string name="bus_list_btn_after_day">&gt;</string>

    <!--  Bus Detail Activity  -->
    <string name="bus_detail_header">버스 상세 정보</string>
    <string name="bus_detail_company">버스 회사</string>
    <string name="bus_detail_price">가격</string>
    <string name="bus_detail_btn_reservation_ticket">예매</string>

    <!--  Bus Register Activity  -->
    <string name="bus_register_header">버스 등록</string>
    <string name="bus_register_departure">출발지</string>
    <string name="bus_register_arrival">도착지</string>
    <string name="bus_register_depart_time">출발 시간</string>
    <string name="bus_register_arrival_time">도착 시간</string>
    <string name="bus_register_type">버스 타입</string>
    <string name="bus_register_price">가격</string>

    <!--  Payment Activity -->
    <string name="payment_ticket_info">선택한 티켓 정보</string>
    <string name="payment_select_method">결제 수단을 선택하세요.</string>
    <string name="payment_price">금액 : </string>
    <string name="payment_method_credit_card">신용/체크카드</string>
    <string name="payment_method_bank_account_deposit">무통장 입금</string>
    <string name="payment_method_account_transfer">계좌이체</string>
    <string name="payment_btn_payment">결제</string>
    <string name="payment_date_and_time">날짜 및 시간</string>

    <!--   Member List Activity-->
    <string name="member_list_header">멤버 리스트</string>

    <!--  Payment History Activity  -->
    <string name="payment_history_header">결제 내역 조회</string>
    <!--  Payment History Item  -->
    <string name="payment_history_item_detail_info">상세&#10;보기</string>

    <!--  TicketDetail List Activity  -->
    <string name="ticket_list_header">티켓 목록 조회</string>
    <!--  TicketDetail List Item  -->
    <string name="ticket_item_id">티켓번호 : </string>

    <!--  TicketDetail Detail Activity  -->
    <string name="ticket_detail_info">티켓 상세 정보</string>
    <string name="ticket_detail_start_date">출발 날짜</string>
    <string name="ticket_detail_end_date">도착 날짜</string>
    <string name="ticket_detail_type">등급</string>
    <string name="ticket_detail_seat_number">좌석 번호</string>
</resources>
