<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/square_gray_border"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_date_and_time"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/bus_detail_company"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/bus_detail_price"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/payment_history_item_date_and_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_date_and_time"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/payment_history_item_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/bus_detail_company"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/payment_history_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/bus_detail_price"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="12dp"
        android:layout_weight="0.3"
        android:text="@string/payment_history_item_detail_info"
        android:textSize="24sp"/>
</LinearLayout>